# crd-test

./: .envrc  .gitignore  Makefile  README.md  devspace.yaml  task.yaml
aliases/: cargo  npm-build  run-test  rust
components/operators/pipeline-monitor/: Cargo.toml  Dockerfile  devspace.yaml
components/operators/pipeline-monitor/code/: Cargo.toml
components/operators/pipeline-monitor/code/src/: main.rs  operations.rs
components/operators/pipeline-monitor/code/src/pipelines/: mod.rs  state.rs
components/operators/pipeline-monitor/code/src/resource_watcher/: api.rs
components/operators/pipeline-monitor/code/src/resources/: api.rs  state.rs
components/operators/task-monitor/: Cargo.toml  Dockerfile
components/operators/version-monitor/: Cargo.toml
components/resources/git-resource/: Dockerfile  devspace.yaml
deployment/operators/: Chart.yaml  values.yaml
helm/: values.yaml
helm/operator/: Chart.yaml  values.yaml
helm/pipeline/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  role-binding.yaml  service-account.yaml  task.yaml
images/dev/: Dockerfile
infrastructure/: kind-config.yaml
infrastructure/helm/: Chart.yaml  values.yaml
minion-controller/: .dockerignore  Cargo.toml  Dockerfile  Makefile
minion-controller/src/: main.rs
operators/minion-controller/: Cargo.toml
operators/minion-controller/src/: main.rs
operators/pipeline-monitor/: Dockerfile
operators/task-monitor/: Cargo.toml
operators/version-monitor/: Dockerfile
scripts/: start.sh  stop.sh  update-hosts.sh
tests/: pipeline.yaml  task.yaml  version.yaml
(+178 files in other folders)
