[package]
name = "minion-controller"
version = "0.1.0"
authors = ["wrbe9001"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.24.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.1"
anyhow = "1.0.26"
tokio = { version = "0.2.6", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units=1
panic = 'abort'