[package]
name = "pipeline-monitor"
version = "0.1.0"
authors = ["wrbe9001"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.31.0" }
kube-derive = { version = "0.31.0" }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.1"
futures-timer = "3.0.1"
anyhow = "1.0.26"
tokio = { version = "0.2.6", features = ["full"] }
signal-hook = "0.1.13"

[profile.release]
# opt-level = 'z'
# lto = true
# codegen-units=1
# panic = 'abort'
